@@ -18,6 +18,27 @@ Execute the Gradle task `rewriteRun` from the `rewrite` group of the Gradle Tool
 
 Background: [OpenRewrite](https://docs.openrewrite.org/) is an automated refactoring ecosystem for source code.
 
+### Failing Google Java Format (AOSP) tests
+
+Please ensure that you set up and configured the Google Java Format IntelliJ plugin correctly.
+
+It is also possible to run it on the command line.
+Download the bineary from the [Google Java Format project](https://github.com/google/google-java-format).
+
+On Windows, to fix using the command line, you can run the following command in the root directory of the project:
+
+```bash
+find . -name "*.java" -exec /c/Users/{username}/Downloads/google-java-format_windows-x86-64.exe -r -a --skip-reflowing-long-strings --skip-javadoc-formatting "{}" \;
+```
+
+On Linux, it is similar to following call:
+
+```bash
+find . -name "*.java" -exec /c/Program\ Files/OpenJDK/jdk-21.0.2/bin/java  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED -jar /c/Users/{username}/Downloads/`google-java-format-1.24.0-al`l-deps.jar -r -a --skip-reflowing-long-strings --skip-javadoc-formatting "{}" \;
+```
+
+Note that the `.exe` does not produce the same results - thus the following command does not work:
+
 ### `org.jabref.logic.l10n.LocalizationConsistencyTest findMissingLocalizationKeys` <span style="color:red">FAILED</span>
 
 You have probably used Strings that are visible on the UI (to the user) but not wrapped them using `Localization.lang(...)` and added them to the [localization properties file](https://github.com/JabRef/jabref/blob/main/src/main/resources/l10n/JabRef_en.properties).
